# zarr-ml

./: LICENSE  Makefile  README.md  dune-project  index.html  zarr-eio.opam  zarr-lwt.opam  zarr-sync.opam  zarr.opam  zarr.opam.template
.github/workflows/: build-and-test.yml
doc/: dune  index.mld
examples/: dune  inmemory_zipstore.ml  picos_fs_store.ml  readonly_zipstore.ml  zipstore.ml
lib/: dune  extensions.ml  extensions.mli  metadata.ml  metadata.mli  node.ml  node.mli  types.ml  util.ml  util.mli  zarr.ml  zarr.mli
lib/codecs/: array_to_array.ml  array_to_array.mli  array_to_bytes.ml  array_to_bytes.mli  bytes_to_bytes.ml  bytes_to_bytes.mli  codecs.ml  codecs.mli  codecs_intf.ml  ebuffer.ml  ebuffer.mli
lib/storage/: base.ml  filesystem.ml  interface.ml  memory.ml  storage.ml  storage.mli  storage_intf.ml
test/: dune  test_codecs.ml  test_indexing.ml  test_lwt_storage.ml  test_metadata.ml  test_node.ml  test_storage.ml  test_sync_storage.ml  test_zarr.ml
zarr/: index.html
zarr-eio/: index.html
zarr-eio/Zarr_eio/: index.html
zarr-eio/Zarr_eio/Deferred/: index.html
zarr-eio/Zarr_eio/Deferred/Infix/: index.html
zarr-eio/Zarr_eio/Deferred/Syntax/: index.html
zarr-eio/Zarr_eio/Storage/: index.html
zarr-eio/Zarr_eio/Storage/Deferred/: index.html
zarr-eio/Zarr_eio/Storage/FilesystemStore/: index.html
zarr-eio/Zarr_eio/Storage/HttpStore/: index.html
zarr-eio/Zarr_eio/Storage/IO/: index.html
zarr-eio/Zarr_eio/Storage/MemoryStore/: index.html
zarr-eio/Zarr_eio/Storage/ZipStore/: index.html
zarr-eio/src/: deferred.ml  dune  storage.ml  storage.mli
zarr-eio/test/: dune  test_eio.ml
zarr-lwt/: deferred.ml  deferred.mli  dune  index.html  storage.ml
zarr-lwt/Zarr_lwt/: index.html
zarr-lwt/Zarr_lwt/Deferred/: index.html
zarr-lwt/Zarr_lwt/Deferred/Infix/: index.html
zarr-lwt/Zarr_lwt/Deferred/Syntax/: index.html
zarr-lwt/Zarr_lwt/Storage/: index.html
zarr-lwt/Zarr_lwt/Storage/AmazonS3Store/: index.html
zarr-lwt/Zarr_lwt/Storage/AwsStore/: index.html
zarr-lwt/Zarr_lwt/Storage/Deferred/: index.html
zarr-lwt/Zarr_lwt/Storage/FilesystemStore/: index.html
zarr-lwt/Zarr_lwt/Storage/HttpStore/: index.html
zarr-lwt/Zarr_lwt/Storage/IO/: index.html
zarr-lwt/Zarr_lwt/Storage/MemoryStore/: index.html
zarr-lwt/Zarr_lwt/Storage/ZipStore/: index.html
zarr-lwt/src/: deferred.ml  dune  storage.ml  storage.mli
zarr-lwt/test/: dune  test_lwt.ml
zarr-sync/: deferred.ml  dune  index.html  storage.ml
zarr-sync/Zarr_sync/: index.html
zarr-sync/Zarr_sync/Deferred/: index.html
zarr-sync/Zarr_sync/Deferred/Infix/: index.html
zarr-sync/Zarr_sync/Deferred/Syntax/: index.html
zarr-sync/Zarr_sync/Storage/: index.html
zarr-sync/Zarr_sync/Storage/Deferred/: index.html
zarr-sync/Zarr_sync/Storage/FilesystemStore/: index.html
zarr-sync/Zarr_sync/Storage/HttpStore/: index.html
zarr-sync/Zarr_sync/Storage/IO/: index.html
zarr-sync/Zarr_sync/Storage/MemoryStore/: index.html
zarr-sync/Zarr_sync/Storage/ZipStore/: index.html
zarr-sync/src/: deferred.ml  deferred.mli  dune  storage.ml  storage.mli
zarr-sync/test/: dune  test_sync.ml
zarr/Zarr/: index.html
zarr/Zarr/ArrayMetadata/: index.html
zarr/Zarr/Codecs/: index.html
zarr/Zarr/Codecs/Chain/: index.html
zarr/Zarr/Codecs/Make/: index.html
zarr/Zarr/GroupMetadata/: index.html
zarr/Zarr/Http/: index.html
zarr/Zarr/Http/Make/: index.html
zarr/Zarr/Http/module-type-C/: index.html
zarr/Zarr/Http/module-type-S/: index.html
zarr/Zarr/Indexing/: index.html
zarr/Zarr/Memory/: index.html
zarr/Zarr/Memory/M/: index.html
zarr/Zarr/Memory/Make/: index.html
zarr/Zarr/Memory/StrMap/: index.html
zarr/Zarr/Memory/module-type-S/: index.html
zarr/Zarr/Metadata/: index.html
zarr/Zarr/Metadata/Array/: index.html
zarr/Zarr/Metadata/ArrayMetadata/: index.html
zarr/Zarr/Metadata/FillValue/: index.html
zarr/Zarr/Metadata/Group/: index.html
zarr/Zarr/Metadata/GroupMetadata/: index.html
zarr/Zarr/Ndarray/: index.html
zarr/Zarr/Ndarray/Indexing/: index.html
zarr/Zarr/Node/: index.html
zarr/Zarr/Node/Array/: index.html
zarr/Zarr/Node/ArrayNode/: index.html
zarr/Zarr/Node/Group/: index.html
zarr/Zarr/Storage/: index.html
zarr/Zarr/StorageTransformers/: index.html
zarr/Zarr/Types/: index.html
zarr/Zarr/Util/: index.html
zarr/Zarr/Zip/: index.html
zarr/src/: codecs.ml  codecs.mli  dune  ebuffer.ml  extensions.ml  extensions.mli  metadata.ml  metadata.mli  ndarray.ml  ndarray.mli  node.ml  node.mli  types.ml  util.ml  util.mli  zarr.ml  zarr.mli
zarr/src/codecs/: array_to_array.ml  array_to_array.mli  array_to_bytes.ml  array_to_bytes.mli  bytes_to_bytes.ml  bytes_to_bytes.mli  codecs.ml  codecs.mli  codecs_intf.ml  ebuffer.ml  ebuffer.mli
zarr/src/storage/: http.ml  memory.ml  storage.ml  storage.mli  storage_intf.ml  zip.ml  zip_archive.ml
zarr/test/: dune  test_all.ml  test_codecs.ml  test_indexing.ml  test_metadata.ml  test_ndarray.ml  test_node.ml
(+190 files in other folders)
