(library
 (name zarr)
 (public_name zarr)
 (libraries
   yojson
   ppx_deriving_yojson.runtime
   ezgzip
   owl
   stdint
   checkseum)
 (ocamlopt_flags
   (:standard -O3))
 (preprocess
   (pps
     ppx_deriving.show
     ppx_deriving_yojson))
 (instrumentation
   (backend bisect_ppx)))

(include_subdirs unqualified)
